gateways/argocd-gateway.yaml
# istio-gateway-argocd.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
      hosts:
        - "argocd.toway.xyz"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - "argocd.toway.xyz"
  gateways:
    - argocd-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - "argocd.toway.xyz"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 443
